compiler/testData/cli/jvm/classAndFileClassClash.out
compiler/testData/cli/jvm/classAndFileClassClash.kt:1:1: error: duplicate JVM class name 'test/Foo' generated from: package-fragment test, Foo
@file:jvmName("Foo")
^
compiler/testData/cli/jvm/classAndFileClassClash.kt:6:1: error: duplicate JVM class name 'test/Foo' generated from: package-fragment test, Foo
class Foo {}
^
COMPILATION_ERROR