compiler/testData/cli/jvm/classAndFileClassClash.kt
@file:jvmName("Foo")
package test

public fun foo() {}

class Foo {}